@@ -21,6 +21,7 @@ exportMethods(assayData)
 exportMethods(bestConditions)
 exportMethods(colData)
 exportMethods(conditionData)
+exportMethods(conditionNames)
 exportMethods(dim)
 exportMethods(dimnames)
 exportMethods(filterCv)
