@@ -1,7 +1,8 @@
 # topdownr 1.1
 
 Changes in version 1.1.3
-- Nothing yet.
+- Add `conditionNames,AbstractTopDownSet-method` to access
+  `rownames(colData(tds))` [2017-12-23].
 
 Changes in version 1.1.2
 - Add `.rbind` to combine scan and method information with different number of
